--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-4">
   <div class="well">
-    <h3><%= group.name %></h3>
+    <h3><%= link_to group.name, group_path(group) %></h3>
     <p><%= group.description %></p>
   </div>
 </div>
