--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,9 +1,16 @@
 <%= button_tag("Add People", class: "btn btn-primary pull-right", data: {toggle: "modal", target: "#addPeopleModal"}) if current_user.can_invite_to?(@group) %>
+<%= button_tag("Track an Expense", class: "btn btn-primary pull-right", data: {toggle: "modal", target: "#trackExpenseModal"}) %>
 <h1><%= @group.name %></h1>
 <p><%= @group.description %></p>
 <ul>
   <% @members.each do |member| %>
     <li><%= member.email %></li>
+  <% end %>
+</ul>
+
+<ul>
+  <% @expenses.each do |expense| %>
+    <li><%= expense.title %>: Rs. <%= expense.amount %></li>
   <% end %>
 </ul>
 
@@ -26,3 +33,21 @@
     </div>
   </div>
 <% end %>
+
+<div id="trackExpenseModal" class="modal fade">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Track an Expense</h4>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for [@group, @expense] do |f| %>
+          <%= f.input :title %>
+          <%= f.input :amount %>
+          <%= f.submit "Track Expense", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
