--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,17 +2,36 @@
 <%= button_tag("Track an Expense", class: "btn btn-primary pull-right", data: {toggle: "modal", target: "#trackExpenseModal"}) %>
 <h1><%= @group.name %></h1>
 <p><%= @group.description %></p>
-<ul>
+<ul class="list-group">
   <% @members.each do |member| %>
-    <li><%= member.email %></li>
+    <li class="list-group-item">
+      <span class="badge">14</span>
+      <%= member.email %>
+    </li>
   <% end %>
 </ul>
 
-<ul>
-  <% @expenses.each do |expense| %>
-    <li><%= expense.title %>: Rs. <%= expense.amount %></li>
-  <% end %>
-</ul>
+
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Expense Detail</th>
+      <th>Date</th>
+      <th>Added By</th>
+      <th>Amount</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @expenses.each do |expense| %>
+      <tr>
+        <td><%= expense.title %></td>
+        <td><%= expense.created_at.strftime("%b %e, %Y") %></td>
+        <td><%= expense.creator.email %></td>
+        <td>Rs. <%= expense.amount %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <% if current_user.can_invite_to?(@group) %>
   <div id="addPeopleModal" class="modal fade">
