--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -16,7 +16,7 @@
   <thead>
     <tr>
       <th>Expense Detail</th>
-      <th>Date</th>
+      <th>Bill Date</th>
       <th>Added By</th>
       <th>Amount</th>
     </tr>
@@ -25,7 +25,7 @@
     <% @expenses.each do |expense| %>
       <tr>
         <td><%= expense.title %></td>
-        <td><%= expense.created_at.strftime("%b %e, %Y") %></td>
+        <td><%= expense.bill_date.strftime("%b %e, %Y") %></td>
         <td><%= expense.creator.email %></td>
         <td>Rs. <%= expense.amount %></td>
       </tr>
@@ -64,6 +64,7 @@
         <%= simple_form_for [@group, @expense] do |f| %>
           <%= f.input :title %>
           <%= f.input :amount %>
+          <%= f.input :bill_date, html5: true, input_html: {value: Date.today} %>
           <%= f.submit "Track Expense", class: "btn btn-primary" %>
         <% end %>
       </div>
